Move http.core classes into separate module
Resolves #1001